# my_learning

./: .gitignore  CV.md  Makefile  README.md  ex2.py  example.py  hellowhat.py  pyproject.toml  setup.cfg
.github/workflows/: example_of_yml.md  main.yml  test.yml
HTML_lerning/: css studing.html  my_first_HTML_file.html
HTML_lerning/css/: styles.css
learning_files/: creating_new_projects.md  ex2.py  example.py  fixtures.md  levels_of_abstraction.py  regexp.py  trees.py
learning_files/gendiff/: stylish.py
learning_files/input_output_in_python/: input_file.txt  input_output_functions.py  output.txt  output_file.txt  output_file2.txt
learning_files/scripts/: example.py
