[tool.poetry]
name = "my-learning"
version = "0.1.0"
description = ""
authors = ["pavelpminaev <pavelpminaev@gmail.com>"]
readme = "README.md"
packages = [{include = "learning_files"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.991"
hexlet-immutable-fs-trees = "^0.1.8"
pymp = "^0.0.6"

[tool.poetry.scripts]
say-hello = "learning_files.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
prompt = "^0.4.1"
colorama = "^0.4.6"
wemake-python-styleguide = "^0.17.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
